nativeTitlebar - fixed z-index

--- a/nativeTitlebar/themefile.css
+++ b/nativeTitlebar/themefile.css
@@ -84,6 +84,10 @@
 .header-toolbar .separator.separator-win {
     display: none;
 }
+.tooltip,
+.context-menu {
+    z-index: 3005;
+}
 
 /* Stable */
 .titlebar {
